[package]
name = "harness"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.56"
async-global-executor = "2.0.3"
async-process = "1.3.0"
async-std = "1.11.0"
escargot = "0.5.7"
futures = "0.3.21"
ipfs-embed-cli = { path = "../cli" }
libipld = {ssh = "ssh://git@gitlab.com:ColombaLink/dev/dapsi/public/dybli/core/deps/libipld.git"}
libp2p = { version = "0.49.0", default-features = false }
maplit = "1.0.2"
multihash = { ssh = "git@gitlab.com:ColombaLink/dev/dapsi/public/dybli/core/deps/multihash.git" }
netsim-embed = "0.7.1"
rand = "0.8.5"
structopt = "0.3.26"
tempdir = "0.3.7"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
